<resources>
    <string name="app_name">EduSpehere</string>
    <string name="get_started">Get Started</string>
    <string name="e_mail">E-Mail</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="NE_mail">E-Mail</string>
    <string name="Npassword">Password</string>
    <string name="re_enter">Re-enter</string>
    <string name="name">Name</string>
    <string name="About">About Us</string>
    <string name="Donation">Donatio</string>
    <string name="about_us">About Us</string>
    <string name="Contact">Contact Us</string>
    <string name="donations">Donations</string>
    <string name="My">My Account</string>
    <string name="Location">Location</string>
    <string name="call">call</string>
    <string name="todo">TODO</string>
    <string name="Success">Success</string>
    <string name="my_account">My Account</string>
    <string name="contact_us">Contact Us</string>
    <string name="success_story">Success Story</string>
    <string name="register">Register</string>
    <string name="setting">Setting</string>
    <string name="set">TODO</string>
    <string name="Myacc">My acc</string>
    <string name="sett">Setting</string>
    <string name="Accho">Accho</string>
    <string name="Ho">ho\n</string>
    <string name="Ca">Ca</string>
    <string name="Co">co</string>
    <string name="Cme">Cme\n</string>
    <string name="CardName">Name</string>
    <string name="card_no">Card No:</string>
    <string name="cvv">CVV</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="Ce_mail">E-Mail</string>
    <string name="message">Message</string>
    <string name="ch">TODO</string>
    <string name="cc">TODO</string>
    <string name="ca">TODO</string>
    <string name="donate_now">Donate Now</string>
    <string name="k">Name</string>
    <string name="g">Card No:</string>
    <string name="datec">Date</string>
    <string name="cvvc">CVV</string>
    <string name="mnb">TODO</string>
    <string name="kjh">TODO</string>
    <string name="ghj">TODO</string>
    <string name="xsw">Name</string>
    <string name="sd">E-Mail</string>
    <string name="occupation">Occupation</string>
    <string name="gender">Gender</string>
    <string name="telephone">Telephone</string>
    <string name="bithday">Bithday</string>
    <string name="lkh">TODO</string>
    <string name="kjhb">TODO</string>
    <string name="ojv">TODO</string>
    <string name="asd">TODO</string>
    <string name="sdd">TODO</string>
    <string name="qwe">TODO</string>
    <string name="jyt">TODO</string>
    <string name="cvb">TODO</string>
</resources>